# oholeo-keyboard-firmware

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakePresets.json  README.md  STM32F303CBTX_FLASH.ld  STM32F303XX_FLASH.ld  oholeo-keyboard-firmware.ioc  stlink.cfg  stm32f303cbtx_flash.ld
Analog/: analog.c  analog.h
Core/Inc/: adc.h  main.h  spi.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  tim.h  usart.h  usb.h
Core/Src/: .main.c.~undo-tree~  adc.c  dma.c  gpio.c  main.c  main.c.~main~  spi.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  syscalls.c  sysmem.c  tim.c  usart.c  usb.c
Drivers/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal_spi_ex.h  stm32f3xx_ll_adc.h  stm32f3xx_ll_tim.h
Drivers/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal_adc_ex.c  stm32f3xx_hal_spi.c  stm32f3xx_hal_spi_ex.c  stm32f3xx_ll_adc.c  stm32f3xx_ll_tim.c
Keyboard/: .keyboard.c.~undo-tree~  .keyboard.h.~undo-tree~  .keyboard_conf.h.~undo-tree~  keyboard.c  keyboard.h  keyboard_conf.h  usb_hid_keys.h
KeyboardKit/: action.c  action.h  advanced_key.c  advanced_key.h  analog.c  analog.h  color.c  color.h  command.c  command.h  filter.c  filter.h  key.c  key.h  keyboard.c  keyboard.h  keyboard_conf.h  keyboard_def.h  keyboard_user.c  keycode.h  layer.c  layer.h  mouse.c  mouse.h  record.c  record.h  rgb.c  rgb.h  usb_hid_keys.h
KeyboardKit/littlefs/: lfs.h  lfs_util.h
KeyboardKit/src/: action.c  action.h  advanced_key.c  advanced_key.h  analog.c  analog.h  color.h  command.c  command.h  communication.h  dynamic_key.c  dynamic_key.h  event.h  extra_key.c  extra_key.h  filter.c  filter.h  joystick.c  joystick.h  key.c  key.h  keyboard.c  keyboard.h  keyboard_def.h  keycode.h  layer.c  layer.h  mouse.c  mouse.h  packet.h  record.c  record.h  rgb.c  rgb.h  storage.c  storage.h
KeyboardKit/src/midi/: midi.c  midi.h  midi_device.c  midi_device.h  process_midi.c  process_midi.h  qmk_midi.c
KeyboardKit/src/midi/bytequeue/: interrupt_setting.c
KeyboardKit/usb/: joystick.h  report.h  usb_descriptor.c  usb_descriptor.h  util.h
KeyboardKit/user/: keyboard_conf.h  keyboard_user.c  lfs_port.c
MDK-ARM/: .gitignore  mqjs_header_generator.bat  oholeo-keyboard-firmware.uvoptx  oholeo-keyboard-firmware.uvprojx  startup_stm32f303xc.s
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
RGB/: rgb.c  rgb.h
USB_DEVICE/App/: .usbd_custom_hid_if.c.~undo-tree~  usb_device.c  usb_device.h  usbd_custom_hid_if.c  usbd_custom_hid_if.h  usbd_desc.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
lefl/: lefl.h  lefl_animation.c  lefl_color.c  lefl_datastruct.c  lefl_easing.c  lefl_graph.c  lefl_input.c  lefl_keyboard.c  lefl_macro.h  lefl_menu.c  lefl_nav.c  lefl_page.c  lefl_pid.c
libamp/: CMakeLists.txt
libamp/littlefs/: lfs.h  lfs_util.h
libamp/src/: advanced_key.c  advanced_key.h  analog.c  color.c  color.h  command.c  command.h  dynamic_key.c  dynamic_key.h  extra_key.h  filter.c  filter.h  joystick.c  joystick.h  key.c  key.h  keyboard.c  keyboard.h  keycode.h  layer.c  layer.h  mouse.h  packet.h  record.c  record.h  rgb.c  storage.c  storage.h
libamp/src/midi/: midi_function_types.h  process_midi.c  process_midi.h  qmk_midi.h
libamp/src/midi/bytequeue/: bytequeue.c
libamp/usb/: progmem.h  usb_descriptor.h  util.h
libamp_user/: keyboard_conf.h  keyboard_config.h  keyboard_user.c
littlefs/: lfs.h  lfs_port.c  lfs_util.h
sfud/inc/: sfud_cfg.h
sfud/port/: sfud_port.c
sfud/src/: sfud.c
snake/: snake.c  snake.h
usb/: usb_config.h  usbd_user.c  usbd_user.h
ws2812/: ws2812.c  ws2812.h
